# Base-Hack

./: .env  Cargo.toml  README.md  backend_to_frontend.js
base-frontend/: package-lock.json  package.json  tailwind.config.js
base-frontend/src/: App.js
base-frontend/src/components/: Chart.jsx  Dash.jsx  Dashboard.jsx  N.jsx  NFTs.jsx  SideBar.jsx  Tkn.jsx  Tokens.jsx  Transactions.jsx  Txn.jsx
base_hack/: Cargo.toml
base_hack/src/: .env  main.rs  utils.rs
base_hack/src/database/: mod.rs  reader.rs  writer.rs
base_hack/src/transaction_history/: erc20_token_identifier.rs  fetcher.rs
src/: main.rs  routes.rs  utils.rs
src/database/: mod.rs  reader.rs  writer.rs
src/portfolio_overview/: erc20_portfolio_tracker.rs  mod.rs  nft_base_portfolio_tracker.rs  nft_portfolio_tracker.rs  token_contract_addresses.rs
src/price_feeds/: price_feed.rs
src/token_identifiers/: erc20_token_identifier.rs  mod.rs  nft_identifier.rs
src/transaction_history/: erc20_token_identifier.rs  fetcher.rs  logs_fetcher.rs  mod.rs  nft_identifier.rs  transaction_history_fetcher.rs
